[tool.poetry]
name = "promt-prototype"
version = "0.1.0"
description = "Прототип системы с двумя автономными агентами копирайтером и маркетологом"
authors = ["Daniil <77277774+shamemask@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
attrs = "23.1.0"
babel = "2.13.1"
beautifulsoup4 = "4.12.2"
bleach = "6.1.0"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
colorama = "0.4.6"
comm = "0.2.0"
crashtest = "0.4.1"
dataclasses-json = "0.6.3"
debugpy = "1.8.0"
decorator = "5.1.1"
defusedxml = "0.7.1"
diskcache = "5.6.3"
distlib = "0.3.7"
distro = "1.8.0"
dulwich = "0.21.6"
executing = "2.0.1"
fastjsonschema = "2.19.0"
filelock = "3.13.1"
flaml = "2.1.1"
fqdn = "1.5.1"
frozenlist = "1.4.0"
greenlet = "3.0.1"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.25.2"
idna = "3.6"
importlib-metadata = "6.8.0"
installer = "0.7.0"
ipykernel = "6.27.1"
ipython = "8.18.1"
ipywidgets = "8.1.1"
isoduration = "20.11.0"
jaraco-classes = "3.3.0"
jedi = "0.19.1"
jinja2 = "3.1.2"
json5 = "0.9.14"
jsonpatch = "1.33"
jsonpointer = "2.4"
jsonschema = "4.20.0"
jsonschema-specifications = "2023.11.1"
jupyter = "1.0.0"
jupyter-console = "6.6.3"
jupyter-events = "0.9.0"
jupyter-lsp = "2.2.1"
jupyter-client = "8.6.0"
jupyter-core = "5.5.0"
jupyter-server = "2.11.1"
jupyter-server-terminals = "0.4.4"
jupyterlab = "4.0.9"
jupyterlab-widgets = "3.0.9"
jupyterlab-pygments = "0.3.0"
jupyterlab-server = "2.25.2"
keyring = "24.3.0"
langchain = "0.0.341"
langchain-core = "0.0.6"
langsmith = "0.0.67"
markupsafe = "2.1.3"
marshmallow = "3.20.1"
matplotlib-inline = "0.1.6"
mistune = "3.0.2"
more-itertools = "10.1.0"
msgpack = "1.0.7"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
nbclient = "0.9.0"
nbconvert = "7.11.0"
nbformat = "5.9.2"
nest-asyncio = "1.5.8"
notebook = "7.0.6"
notebook-shim = "0.2.3"
numpy = "1.26.2"
openai = "1.3.5"
overrides = "7.4.0"
packaging = "23.2"
pandocfilters = "1.5.0"
parso = "0.8.3"
pexpect = "4.9.0"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
prometheus-client = "0.19.0"
prompt-toolkit = "3.0.41"
psutil = "5.9.6"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyautogen = "0.2.0"
pycparser = "2.21"
pydantic = "2.5.2"
pydantic-core = "2.14.5"
pygments = "2.17.2"
pypdf = "3.17.1"
pyproject-hooks = "1.0.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-json-logger = "2.0.7"
pywin32 = "306"
pywin32-ctypes = "0.2.2"
pywinpty = "2.0.12"
pyyaml = "6.0.1"
pyzmq = "25.1.1"
qtconsole = "5.5.1"
qtpy = "2.4.1"
rapidfuzz = "3.5.2"
referencing = "0.31.0"
regex = "2023.10.3"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rpds-py = "0.13.1"
send2trash = "1.8.2"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.5"
sqlalchemy = "2.0.23"
stack-data = "0.6.3"
tenacity = "8.2.3"
termcolor = "2.3.0"
terminado = "0.18.0"
tiktoken = "0.5.1"
tinycss2 = "1.2.1"
tomlkit = "0.12.3"
tornado = "6.3.3"
tqdm = "4.66.1"
traitlets = "5.14.0"
trove-classifiers = "2023.11.22"
types-python-dateutil = "2.8.19.14"
typing-inspect = "0.9.0"
typing-extensions = "4.8.0"
uri-template = "1.3.0"
urllib3 = "2.1.0"
virtualenv = "20.24.7"
wcwidth = "0.2.12"
webcolors = "1.13"
webencodings = "0.5.1"
websocket-client = "1.6.4"
widgetsnbextension = "4.0.9"
yarl = "1.9.3"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
